# f5xc-api-fixed

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  .yamllint.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/config/: repo-settings.json
.github/workflows/: docs.yml  validate-and-release.yml
config/: endpoints.yaml  validation.yaml
docs/: 01-validation-report.mdx  index.md  index.mdx
docs/javascripts/: sidebar-fix.js
docs/modifications/: index.md
release/: README.md
release/specs/: .spec_metadata.json  CHANGELOG.md  docs-cloud-f5-com.0000.public.ves.io.schema.ai_assistant.ves-swagger.json  docs-cloud-f5-com.0001.public.ves.io.schema.api_sec.api_crawler.ves-swagger.json  docs-cloud-f5-com.0002.public.ves.io.schema.views.api_definition.ves-swagger.json  docs-cloud-f5-com.0003.public.ves.io.schema.api_sec.api_discovery.ves-swagger.json  docs-cloud-f5-com.0004.public.ves.io.schema.api_group.ves-swagger.json  docs-cloud-f5-com.0005.public.ves.io.schema.api_group_element.ves-swagger.json  docs-cloud-f5-com.0006.public.ves.io.schema.api_sec.api_testing.ves-swagger.json  docs-cloud-f5-com.0007.public.ves.io.schema.api_credential.ves-swagger.json  docs-cloud-f5-com.0008.public.ves.io.schema.pbac.addon_service.ves-swagger.json  docs-cloud-f5-com.0009.public.ves.io.schema.pbac.addon_subscription.ves-swagger.json  docs-cloud-f5-com.0010.public.ves.io.schema.address_allocator.ves-swagger.json  docs-cloud-f5-com.0011.public.ves.io.schema.advertise_policy.ves-swagger.json  docs-cloud-f5-com.0012.public.ves.io.schema.alert_policy.ves-swagger.json  docs-cloud-f5-com.0013.public.ves.io.schema.alert_receiver.ves-swagger.json  docs-cloud-f5-com.0014.public.ves.io.schema.alert.ves-swagger.json  docs-cloud-f5-com.0015.public.ves.io.schema.tenant_management.allowed_tenant.ves-swagger.json  docs-cloud-f5-com.0016.public.ves.io.schema.views.app_api_group.ves-swagger.json  docs-cloud-f5-com.0017.public.ves.io.schema.app_setting.ves-swagger.json  docs-cloud-f5-com.0018.public.ves.io.schema.app_type.ves-swagger.json  docs-cloud-f5-com.0019.public.ves.io.schema.app_firewall.ves-swagger.json  docs-cloud-f5-com.0020.public.ves.io.schema.app_security.ves-swagger.json  docs-cloud-f5-com.0021.public.ves.io.schema.api_sec.rule_suggestion.ves-swagger.json  docs-cloud-f5-com.0022.public.ves.io.schema.shape.device_id.ves-swagger.json  docs-cloud-f5-com.0023.public.ves.io.schema.authentication.ves-swagger.json  docs-cloud-f5-com.0024.public.ves.io.schema.ai_data.bfdp.ves-swagger.json  docs-cloud-f5-com.0025.public.ves.io.schema.ai_data.bfdp.subscription.ves-swagger.json  docs-cloud-f5-com.0026.public.ves.io.schema.bgp.ves-swagger.json  docs-cloud-f5-com.0027.public.ves.io.schema.bgp_asn_set.ves-swagger.json  docs-cloud-f5-com.0028.public.ves.io.schema.operate.bgp.ves-swagger.json  docs-cloud-f5-com.0029.public.ves.io.schema.bgp_routing_policy.ves-swagger.json  docs-cloud-f5-com.0030.public.ves.io.schema.bigip.apm.ves-swagger.json  docs-cloud-f5-com.0031.public.ves.io.schema.bigip_irule.ves-swagger.json  docs-cloud-f5-com.0032.public.ves.io.schema.views.bigip_virtual_server.ves-swagger.json  docs-cloud-f5-com.0033.public.ves.io.schema.shape.brmalerts.alert_gen_policy.ves-swagger.json  docs-cloud-f5-com.0034.public.ves.io.schema.shape.brmalerts.alert_template.ves-swagger.json  docs-cloud-f5-com.0035.public.ves.io.schema.views.bot_defense_app_infrastructure.ves-swagger.json  docs-cloud-f5-com.0036.public.ves.io.schema.shape.bot_defense.threat_intelligence.bot_detection_rule.ves-swagger.json  docs-cloud-f5-com.0037.public.ves.io.schema.shape.bot_defense.threat_intelligence.bot_detection_update.ves-swagger.json  (+230 more)
scripts/: __init__.py  download.py  generate_docs.py  pre-commit-local.sh  reconcile.py  release.py  validate.py
scripts/utils/: __init__.py  auth.py  constraint_validator.py  report_generator.py  schemathesis_runner.py  spec_loader.py
tests/: __init__.py  conftest.py  test_constraint_validator.py  test_spec_loader.py
